# lanelet2_python_api_for_autoware

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  FIXED_EXAMPLE.py  MANIFEST.in  MGRS_CPP_SOLUTION.md  README.md  RegulationElements.ipynb  USAGE_GUIDE.md  __init__.py  basic_lanelet2_extraction.ipynb  build.py  build.sh  debug_install.py  example.py  example2.py  example_loader.py  example_usage.py  interaction_with_cache_json.ipynb  loader.py  pre-install.sh  pyproject-poetry.toml  pyproject.toml  readme.md  setup.bash  setup.cfg  setup.py
Rosless-Lanelet2/: .gitignore  CMakeLists.txt  README.md
Rosless-Lanelet2/cmake/: FindPugiXml.cmake
Rosless-Lanelet2/lanelet2_core/: CMakeLists.txt
Rosless-Lanelet2/lanelet2_examples/: package.xml
Rosless-Lanelet2/lanelet2_io/: CMakeLists.txt
Rosless-Lanelet2/lanelet2_maps/: package.xml
Rosless-Lanelet2/lanelet2_matching/: CMakeLists.txt
Rosless-Lanelet2/lanelet2_matching/cmake/: lanelet2_matching-config.cmake.in
Rosless-Lanelet2/lanelet2_projection/: CMakeLists.txt
Rosless-Lanelet2/lanelet2_projection/include/lanelet2_projection/: CPM.h
Rosless-Lanelet2/lanelet2_projection/src/: CPM.cpp
Rosless-Lanelet2/lanelet2_python/: CMakeLists.txt  package.xml
Rosless-Lanelet2/lanelet2_routing/: CMakeLists.txt
Rosless-Lanelet2/lanelet2_traffic_rules/: CMakeLists.txt
Rosless-Lanelet2/lanelet2_validation/: CMakeLists.txt
_skbuild/linux-x86_64-3.10/cmake-build/: CMakeCache.txt
_skbuild/linux-x86_64-3.10/cmake-build/CMakeTmp/link_flags/gnu_ld_ignore/MODULE/SHARED/src/: CMakeLists.txt
autoware_lanelet2_extension/: CMakeLists.txt
autoware_lanelet2_extension/cmake/: FindGeographicLib.cmake
autoware_lanelet2_extension/include/lanelet2_extension/: version.hpp
autoware_lanelet2_extension/include/lanelet2_extension/localization/: landmark.hpp
autoware_lanelet2_extension/include/lanelet2_extension/projection/: mgrs_projector.hpp  transverse_mercator_projector.hpp
autoware_lanelet2_extension/include/lanelet2_extension/regulatory_elements/: Forward.hpp  autoware_traffic_light.hpp  bus_stop_area.hpp  crosswalk.hpp  detection_area.hpp  no_parking_area.hpp  no_stopping_area.hpp  road_marking.hpp  speed_bump.hpp  virtual_traffic_light.hpp
autoware_lanelet2_extension/include/lanelet2_extension/utility/: message_conversion.hpp  query.hpp  route_checker.hpp  utilities.hpp
autoware_lanelet2_extension/include/lanelet2_extension/visualization/: visualization.hpp
autoware_lanelet2_extension/lib/: bus_stop_area.cpp  query.cpp  utilities.cpp  visualization.cpp
autoware_lanelet2_extension/src/: check_right_of_way.cpp  sample_code.cpp  validation.cpp
autoware_lanelet2_extension/test/src/: test_regulatory_elements.cpp
autoware_lanelet2_extension_python/: CMakeLists.txt  README.md  __init__.py
autoware_lanelet2_extension_python/autoware_lanelet2_extension_python/: __init__.py
autoware_lanelet2_extension_python/docs/: regulatory_elements.md
autoware_lanelet2_extension_python/example/: example.py
autoware_lanelet2_extension_python/projection/: __init__.py
autoware_lanelet2_extension_python/regulatory_elements/: __init__.py
autoware_lanelet2_extension_python/src/: projection.cpp  utility.cpp
autoware_lanelet2_extension_python/utility/: __init__.py  query.py  utilities.py
lanelet2_python/: CMakeLists.txt  __init__.py
lanelet2_python_api/: __init__.py  build.py  installer.py  library_loader.py
lanelet2_python_api_for_autoware.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
patches/: autoware_lanelet2_extension_full.patch
patches/references/: extension_cmakelists.txt  extension_package.xml  extension_python_cmakelists.txt  extension_python_package.xml
patches/references/cmake/: FindLanelet2.cmake  GeographicLibConfig.cmake  lanelet2_extensionConfig.cmake.in
patches/references/utility/: __init__.py  map_projector_info.py
src/: main.cpp
