[build-system]
requires = ["poetry-core>=1.0.0", "scikit-build", "cmake", "ninja", "pybind11"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autoware-lanelet2-extension-python"
version = "0.1.0"
description = "Python bindings for Lanelet2 with Autoware extension"
authors = ["Masaya Kataoka <ms.kataoka@gmail.com>"]
readme = "readme.md"
packages = [
    {include = "autoware_lanelet2_extension_python"},
    {include = "lanelet2_python"}
]

# Include source files for C extensions in sdist and built extensions in wheel
include = [
    # Python package files
    { path = "autoware_lanelet2_extension_python/**/*.py" },
    { path = "lanelet2_python/**/*.py" },
    
    # Source files for C extensions must be included in the source distribution
    { path = "CMakeLists.txt", format = "sdist" },
    { path = "setup.py", format = "sdist" },
    { path = "setup.cfg", format = "sdist" },
    { path = "build.py", format = "sdist" },
    { path = "Rosless-Lanelet2/**/*.cpp", format = "sdist" },
    { path = "Rosless-Lanelet2/**/*.h", format = "sdist" },
    { path = "Rosless-Lanelet2/**/*.hpp", format = "sdist" },
    { path = "Rosless-Lanelet2/**/CMakeLists.txt", format = "sdist" },
    { path = "autoware_lanelet2_extension/**/*.cpp", format = "sdist" },
    { path = "autoware_lanelet2_extension/**/*.hpp", format = "sdist" },
    { path = "autoware_lanelet2_extension/**/CMakeLists.txt", format = "sdist" },
    { path = "autoware_lanelet2_extension_python/**/*.cpp", format = "sdist" },
    { path = "autoware_lanelet2_extension_python/**/CMakeLists.txt", format = "sdist" },
    { path = "lanelet2_python/**/*.cpp", format = "sdist" },
    { path = "lanelet2_python/**/CMakeLists.txt", format = "sdist" },
    
    # Built C extensions must be included in the wheel distribution
    { path = "autoware_lanelet2_extension_python/**/*.pyd", format = "wheel" },
    { path = "autoware_lanelet2_extension_python/**/*.so", format = "wheel" },
    { path = "lanelet2_python/**/*.pyd", format = "wheel" },
    { path = "lanelet2_python/**/*.so", format = "wheel" },
]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.0"
setuptools = "^68.0.0"
wheel = "^0.40.0"
scikit-build = "^0.17.0"
cmake = "^3.25.0"
ninja = "^1.11.0"
pybind11 = "^2.10.0"
pytest = "^7.0.0"
