[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["autoware_lanelet2_extension_python", "lanelet2_python"]
include-package-data = true

[tool.setuptools.package-data]
"autoware_lanelet2_extension_python" = ["**/*.py"]
"lanelet2_python" = ["**/*.py"]

[project]
name = "autoware-lanelet2-extension-python"
version = "0.1.0"
description = "Python-only bindings for Lanelet2 with Autoware extension"
authors = [{name = "Masaya Kataoka", email = "ms.kataoka@gmail.com"}]
readme = "readme.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/tier4/lanelet2_python_api_for_autoware"
Repository = "https://github.com/tier4/lanelet2_python_api_for_autoware.git"
