[build-system]
requires = [
    "setuptools>=61.0,<77.0.0",
    "wheel", 
    "cmake>=3.21",
]
build-backend = "setuptools.build_meta"

[project]
name = "lanelet2-python-api-for-autoware"
version = "0.1.0"
description = "Standalone implementation of the Lanelet2 library and Autoware's Lanelet2 extension"
readme = "readme.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=5.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/lanelet2_python_api_for_autoware"
Repository = "https://github.com/yourusername/lanelet2_python_api_for_autoware"

# Poetry configuration for dependency management
[tool.poetry]
name = "lanelet2-python-api-for-autoware"
version = "0.1.0"
description = "Standalone implementation of the Lanelet2 library and Autoware's Lanelet2 extension"
authors = ["Your Name <you@example.com>"]
readme = "readme.md"
packages = [
    {include = "autoware_lanelet2_extension_python", from = "autoware_lanelet2_extension/autoware_lanelet2_extension_python"},
    {include = "lanelet2"},
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
matplotlib = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
flake8 = "^5.0.0"
black = "^22.0.0"
isort = "^5.10.0"
jupyter = "^1.0.0"
notebook = "^6.5.0"


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
force_sort_within_sections = true
force_single_line = true
reverse_relative = true
known_third_party = ["launch"]

[tool.flake8]
extend-ignore = ["B902", "C816", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D203", "D212", "D404", "I202", "CNL100", "E203", "E501", "Q000"]
import-order-style = "pep8"
max-line-length = 100
show-source = true
statistics = true