[metadata]
name = autoware-lanelet2-extension-python
version = 0.1.0
author = Masaya Kataoka
author_email = ms.kataoka@gmail.com
description = Python bindings for Lanelet2 with Autoware extension
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/tier4/lanelet2_python_api_for_autoware
project_urls =
    Bug Tracker = https://github.com/tier4/lanelet2_python_api_for_autoware/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
python_requires = >=3.10
packages = find:
install_requires =
    numpy>=1.21.0

[options.packages.find]
include = 
    autoware_lanelet2_extension_python
    autoware_lanelet2_extension_python.*
    lanelet2_python
    lanelet2_python.*

[options.package_data]
* = *.so, *.pyd, *.dll