cmake_minimum_required(VERSION 3.5.1)
project(lanelet2_python VERSION 1.1.1)

# Specify C++ standard and ensure PIC is enabled
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# Find Boost with Python component
find_package(Boost REQUIRED COMPONENTS python system filesystem)
find_package(PythonLibs REQUIRED)

# Handle GeographicLib specially to avoid conflicts
if(NOT TARGET GeographicLib)
    find_package(GeographicLib REQUIRED)
endif()

# Define the Python modules to be built
set(PYTHON_MODULES
    core
    geometry
    io
    matching
    projection
    routing
    traffic_rules
)

# Create a separate library for each module
foreach(module ${PYTHON_MODULES})
    add_library(${module}_py SHARED
        python_api/${module}.cpp
    )

    set_target_properties(${module}_py PROPERTIES
        PREFIX ""
        OUTPUT_NAME ${module}
        LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/python3/dist-packages/lanelet2
        COMPILE_DEFINITIONS "PYTHON_API_MODULE_NAME=${module}"
    )

    target_include_directories(${module}_py PRIVATE
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
        ${CMAKE_CURRENT_SOURCE_DIR}/../lanelet2_core/include
        ${Boost_INCLUDE_DIRS}
        ${PYTHON_INCLUDE_DIRS}
    )

    # Modified link libraries section - Add RPATH setting and change PRIVATE to PUBLIC
    set_target_properties(${module}_py PROPERTIES
        INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib"
        BUILD_WITH_INSTALL_RPATH TRUE
    )

    target_link_libraries(${module}_py PUBLIC  # Changed from PRIVATE to PUBLIC
        ${Boost_LIBRARIES}
        ${PYTHON_LIBRARIES}
        lanelet2_core
        lanelet2_io
        lanelet2_routing
        lanelet2_traffic_rules
        lanelet2_projection
        lanelet2_matching
    )

    install(TARGETS ${module}_py
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/python3/dist-packages/lanelet2
    )
endforeach()

# Create an __init__.py file
file(WRITE ${CMAKE_BINARY_DIR}/lib/python3/dist-packages/lanelet2/__init__.py "
# Autogenerated by mrt_cmake_modules for python api

from os.path import dirname
from pkgutil import iter_modules

# automatically import all files in this module
__all__ = [name for _, name, _ in iter_modules([dirname(__file__)])]

for module_name in __all__:
    from importlib import import_module
    module = import_module(__name__ + '.' + module_name)
    if len(__all__) == 1:
        globals().update(module.__dict__)
    del module
")
install(FILES ${CMAKE_BINARY_DIR}/lib/python3/dist-packages/lanelet2/__init__.py
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/python3/dist-packages/lanelet2
)