<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lanelet2_python</name>
  <version>1.1.1</version>
  <description>Python bindings for lanelet2</description>

  <license>BSD</license>
  <maintainer email="fabian.poggenhans@kit.edu">Fabian Poggenhans</maintainer>
  <author email="fabian.poggenhans@kit.edu">Fabian Poggenhans</author>
  <url type="repository">https://github.com/fzi-forschungszentrum-informatik/lanelet2.git</url>

  <test_depend>gtest</test_depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_matching</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>libboost-python-dev</depend>
</package>
